[package]
name = "emit-crash"
version = "0.1.0"
authors = ["yejiayu <yejiayu.fe@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "When child threads panic, the main thread also exit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
crossbeam-channel = "0.4"
